vbnc/vbnc/vbnc/tests/Errors/30070-1.vb
Class test1
    Shared Sub Main()
        Dim c As system.collections.arraylist
        Dim j As Integer
        For Each i As Object In c

        Next i(0)
    End Sub
End Class
